[package]
name = "convert_wordpress_sql"
version = "0.1.0"
authors = ["Evgeniy Polyakov <zbr@ioremap.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
rust-crypto = "*"
mysql = "*"
serde_json = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

[dependencies.rocksdb]
features = ["multi-threaded-cf"]
